--- a/package.json
+++ b/package.json
@@ -28,5 +28,11 @@
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-helmet": "^6.1.0"
+  },
+  "devDependencies": {
+    "autoprefixer": "^10.2.5",
+    "gatsby-plugin-postcss": "^4.5.0",
+    "postcss": "^8.3.0",
+    "tailwindcss": "^2.1.2"
   }
 }
