--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "clean": "gatsby clean"
   },
   "dependencies": {
+    "@sanity/block-content-to-react": "^3.0.0",
     "gatsby": "^3.4.1",
     "gatsby-plugin-google-analytics": "^3.5.0",
     "gatsby-plugin-image": "^1.5.0",
