--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   },
   "dependencies": {
     "@sanity/block-content-to-react": "^3.0.0",
+    "@tailwindcss/typography": "^0.4.0",
     "dotenv": "^10.0.0",
     "gatsby": "^3.4.1",
     "gatsby-plugin-google-analytics": "^3.5.0",
